# spark_training20260122

./: Dockerfile  Pipfile  py01_creating_spark_session.py  py01_creating_spark_session_blank.py  py02_creating_dataframes.ipynb  py02_creating_dataframes.py  py03_reading_dataframes.py  py04_writing_dataframes.py  py05_caching_dataframes.py  py06_analyzing_dataframes_sql.py  py06_analyzing_dataframes_sql_parameters.py  py07_analyzing_dataframes_api.py  py08_joining_dataframes_api.py  py09_shuffling_dataframes_api.py  py101_koalas.py  py10_details_dataframes_api.py  py11_analyzing_dataframes_pandas.py  py12_plotting_spark4plus.py  py20_testing_dataframes_api.py  py21_testing_dataframes_pytest.py  py21_testing_dataframes_tests.py  py23_testing_bad_example.py  py32_broadcast.py  py41_dynamic_queries.py  py500_dbconnect.py  py51_streaming_api.py  py52_streaming_api_kafka.py  py55_streaming_api.ipynb  py56_fake_stream.ipynb  py57_fake_stream_kafka.py  py61_flatmaps.py  py62_json_complex_types.py  py71_udf.py  py81_ml.py  py91_delta.py  py91_delta_filebased.py  py92_streaming_demo_delta.py  py999_prep_tables.ipynb  py999_prep_tables.py  pyproject.toml  (+1 more)
training/: 01_explore_data_with_sql.py  02_working_with_parquet.py  03_DataFrame_Operations.py  03_recap_DataFrame_Operations.py  04_DataFrame_Grouping.py  05_DataFrame_joins.py  06_recap_DataFrame_complex.py  07_create_testable_functions.py  08_analyze_the_stream.py
training_dbx/: 03_DataFrame_Operations.ipynb  03_recap_DataFrame_Operations.ipynb  04_DataFrame_Grouping.ipynb  05_DataFrame_joins.ipynb  (+1 more)
